--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
+    "@lume/three-meshline": "^4.0.5",
     "lume": "^0.3.0-alpha.39"
+  },
+  "devDependencies": {
+    "five-server": "^0.3.2",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "scripts": {
+    "start": "five-server"
   }
 }
